src/objects/CHANNEL_ORDERS__Partner_Pricebook_Entry__c.object
<CustomObject>
    <label>Partner Pricebook Entry</label>
    <nameField>
        <displayFormat>PPE-{000000}</displayFormat>
        <label>Partner Pricebook Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Pricebook Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>CHANNEL_ORDERS__Pricebook_Entry_Id__c</fullName>
        <description>This is the pricebook entry Id of the associated data in org62</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pricebook entry Id of the associated data in org62</inlineHelpText>
        <label>Pricebook Entry Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_Name__c</fullName>
        <description>This is the Product Name of the associated data in org62.</description>
        <inlineHelpText>This is the Product Name of the associated data in org62.</inlineHelpText>
        <label>Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                    <default>true</default>
                    <label>Enterprise</label>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Historic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>CHANNEL_ORDERS__All</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Product_Name__c</columns>
        <columns>CHANNEL_ORDERS__Pricebook_Entry_Id__c</columns>
        <columns>CHANNEL_ORDERS__Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>